# handlers/app.go
@@ -72,7 +72,7 @@ func StartApp() *gin.Engine {
 		productsRouter.DELETE("/:productId", middlewares.ProductAuthorization(), productHandler.DeleteProduct)
 	}
 
-	transactionHistoryRepo := transaction_history_pg.NewTransactionHistoryPG(db)
+	transactionHistoryRepo := transaction_history_pg.NewTransactionHistoryPG(db, productRepo, userRepo, categoryRepo)
 	transactionHistoryService := services.NewTransactionHistoryService(transactionHistoryRepo, productRepo, userRepo, categoryRepo)
 	transactionHistoryHandler := http_handlers.NewTransactionHistoryHandler(transactionHistoryService)
 
@@ -80,7 +80,9 @@ func StartApp() *gin.Engine {
 	transactionHistoryRouter.Use(middlewares.Authentication())
 	{
 		transactionHistoryRouter.POST("/", transactionHistoryHandler.CreateTransaction)
-		transactionHistoryRouter.GET("/my-transactions", middlewares.Authentication(), transactionHistoryHandler.GetTransactionsByUserID)
+		transactionHistoryRouter.GET("/my-transactions", middlewares.TaskAuthorization(), transactionHistoryHandler.GetTransactionsByUserID)
+		transactionHistoryRouter.GET("/user-transactions", middlewares.TaskAuthorization(), middlewares.Authentication(), transactionHistoryHandler.GetTransactionsByUserID)
+
 	}
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
